--- a/XF.BindableProperty/XF.BindableProperty.csproj
+++ b/XF.BindableProperty/XF.BindableProperty.csproj
@@ -12,7 +12,7 @@
 		<PackageTags>ILWeaving, Fody, Cecil, AOP, Xamarin</PackageTags>
 		<PackageOutputPath>$(SolutionDir)/nugets</PackageOutputPath>
 		<PackageProjectUrl>https://github.com/HeroicSoft/XF.BindableProperty</PackageProjectUrl>
-		<PackageIconUrl></PackageIconUrl>
+		<PackageIconUrl>https://github.com/HeroicSoft/XF.BindableProperty/blob/master/Icon.png</PackageIconUrl>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Fody" Version="6.1.1" PrivateAssets="none" />
