--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -45,4 +45,4 @@ jobs:
       run: dotnet pack -c Release -o out /p:Version=${{ steps.gitversion.outputs.semVer }}
 
     - name: Push generated package to GitHub registry
-      run: nuget push .\out\*.nupkg -Source "github" -SkipDuplicate
+      run: nuget push .\nugets\*.nupkg -Source "github" -SkipDuplicate
