--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -31,18 +31,18 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 2.2.108 
-    
-#    - name: Build with dotnet
-#      run: dotnet build --configuration Release /p:Version=${{ steps.gitversion.outputs.semVer }}
-
+      
     - name: Install NuGet client
       uses: warrenbuckley/Setup-Nuget@v1
-
+      
     - name: Add private GitHub registry to NuGet
       run: nuget sources add -name "github" -Source https://nuget.pkg.github.com/HeroicSoft/index.json -Username HeroicSoft -Password ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Build with dotnet
+      run: dotnet build --configuration Release /p:Version=${{ steps.gitversion.outputs.semVer }}
+    
     - name: Pack
       run: dotnet pack -c Release -o out /p:Version=${{ steps.gitversion.outputs.semVer }}
 
     - name: Push generated package to GitHub registry
-      run: nuget push .\nugets\*.nupkg -Source "github" -SkipDuplicate
+      run: nuget push .\out\*.nupkg -Source "github" -SkipDuplicate
