--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -39,10 +39,10 @@ jobs:
       run: nuget sources add -name "github" -Source https://nuget.pkg.github.com/HeroicSoft/index.json -Username HeroicSoft -Password ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build with dotnet
-      run: dotnet build --configuration Release /p:Version=${{ steps.gitversion.outputs.semVer }}
+      run: dotnet build XF.BindableProperty --configuration Release /p:Version=${{ steps.gitversion.outputs.semVer }}
     
-    - name: Pack
-      run: dotnet pack -c Release -o out /p:Version=${{ steps.gitversion.outputs.semVer }}
+#    - name: Pack
+#      run: dotnet pack -c Release -o out /p:Version=${{ steps.gitversion.outputs.semVer }}
 
     - name: Push generated package to GitHub registry
-      run: nuget push .\out\*.nupkg -Source "github" -SkipDuplicate
+      run: nuget push .\nugets\*.nupkg -Source "github" -SkipDuplicate
