--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -39,9 +39,15 @@ jobs:
     - name: Add private GitHub registry to NuGet
       run: nuget sources add -name "github" -Source https://nuget.pkg.github.com/HeroicSoft/index.json -Username HeroicSoft -Password ${{ secrets.GITHUB_TOKEN }}
 
+#    - name: Build with dotnet
+#      run: dotnet build XF.BindableProperty.Fody\XF.BindableProperty.Fody.csproj --configuration Release /p:Version=${{ steps.gitversion.outputs.semVer }}
+      
+#    - name: Build with dotnet
+#      run: dotnet build XF.BindableProperty\XF.BindableProperty.csproj --configuration Release /p:Version=${{ steps.gitversion.outputs.semVer }}
+
     - name: Build with dotnet
-      run: dotnet build XF.BindableProperty\XF.BindableProperty.csproj --configuration Release /p:Version=${{ steps.gitversion.outputs.semVer }}
-    
+      run: dotnet build --configuration Release -v diag /p:Version=${{ steps.gitversion.outputs.semVer }}
+       
 #    - name: Pack
 #      run: dotnet pack -c Release -o out /p:Version=${{ steps.gitversion.outputs.semVer }}
 
