--- a/XF.BindableProperty/XF.BindableProperty.csproj
+++ b/XF.BindableProperty/XF.BindableProperty.csproj
@@ -13,6 +13,8 @@
 		<PackageOutputPath>$(SolutionDir)/nugets</PackageOutputPath>
 		<PackageProjectUrl>https://github.com/HeroicSoft/XF.BindableProperty</PackageProjectUrl>
 		<PackageIconUrl>https://github.com/HeroicSoft/XF.BindableProperty/blob/master/Icon.png</PackageIconUrl>
+		<RepositoryUrl>https://github.com/HeroicSoft/XF.BindableProperty</RepositoryUrl>
+		<RepositoryType>Git</RepositoryType>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Fody" Version="6.1.1" PrivateAssets="none" />
