--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Fetch all history for all tags and branches
       run: |
         git config remote.origin.url https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
@@ -24,7 +24,7 @@ jobs:
       
     - name: Use GitVersion
       id: gitversion # step id used as reference for output values
-      uses: gittools/actions/execute-gitversion@v0.3
+      uses: gittools/actions/execute-gitversion@v0.9
       with:
         mode: Mainline
         
@@ -39,17 +39,11 @@ jobs:
     - name: Add private GitHub registry to NuGet
       run: nuget sources add -name "github" -Source https://nuget.pkg.github.com/HeroicSoft/index.json -Username HeroicSoft -Password ${{ secrets.GITHUB_TOKEN }}
 
-#    - name: Build with dotnet
-#      run: dotnet build XF.BindableProperty.Fody\XF.BindableProperty.Fody.csproj --configuration Release /p:Version=${{ steps.gitversion.outputs.semVer }}
-      
-#    - name: Build with dotnet
-#      run: dotnet build XF.BindableProperty\XF.BindableProperty.csproj --configuration Release /p:Version=${{ steps.gitversion.outputs.semVer }}
-
     - name: Build with dotnet
       run: dotnet build --configuration Release -v diag /p:Version=${{ steps.gitversion.outputs.semVer }}
-       
-#    - name: Pack
-#      run: dotnet pack -c Release -o out /p:Version=${{ steps.gitversion.outputs.semVer }}
 
     - name: Push generated package to GitHub registry
       run: nuget push .\nugets\*.nupkg -Source "github" -SkipDuplicate
+    
+    - name: Push to nuget.org
+      run: dotnet nuget push .\nugets\*.nupkg -k ${{ secrets.NugetPush }} -s https://api.nuget.org/v3/index.json
