--- a/XF.BindableProperty/XF.BindableProperty.csproj
+++ b/XF.BindableProperty/XF.BindableProperty.csproj
@@ -13,11 +13,17 @@
 		<PackageOutputPath>$(SolutionDir)/nugets</PackageOutputPath>
 		<PackageProjectUrl>https://github.com/HeroicSoft/XF.BindableProperty</PackageProjectUrl>
 		<PackageIconUrl>https://github.com/HeroicSoft/XF.BindableProperty/blob/master/Icon.png</PackageIconUrl>
+		<PackageIcon>Icon.png</PackageIcon>
 		<RepositoryUrl>https://github.com/HeroicSoft/XF.BindableProperty</RepositoryUrl>
 		<RepositoryType>Git</RepositoryType>
 	</PropertyGroup>
+	
 	<ItemGroup>
 		<PackageReference Include="Fody" Version="6.1.1" PrivateAssets="none" />
 		<PackageReference Include="FodyPackaging" Version="6.1.1" PrivateAssets="All" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="..\icon.png" Pack="true" Visible="false" PackagePath="" />
 	</ItemGroup>
 </Project>
