--- a/XF.BindableProperty/XF.BindableProperty.csproj
+++ b/XF.BindableProperty/XF.BindableProperty.csproj
@@ -24,6 +24,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Include="..\icon.png" Pack="true" Visible="false" PackagePath="" />
+		<None Include="..\Icon.png" Pack="true" Visible="false" PackagePath="" />
 	</ItemGroup>
 </Project>
